# appshots

./: .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  ROADMAP.md  implementation-notes.md
.github/workflows/: ci.yml  release.yml
scripts/: install.ps1  linux-vm-smoke.sh  package-release.ps1  proxmox-vm-smoke.sh  windows-live-capture-test.ps1  windows-schedule-live-test.ps1
src/: backends.rs  cli.rs  codex.rs  contract.rs  lib.rs  mcp.rs  polish.rs  text.rs  util.rs
src/capture/: windows.rs
