[package]
name = "cloche"
version = "0.1.0"
edition = "2024"
default-run = "cloche"
description = "Open-source desktop capture CLI for screenshots, short reels, and agents"
license = "Apache-2.0"
repository = "https://github.com/escoffier-labs/cloche"
homepage = "https://github.com/escoffier-labs/cloche"
readme = "README.md"
rust-version = "1.85"
keywords = ["screenshot", "capture", "linux", "cli", "agents"]
categories = ["command-line-utilities"]
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/ROADMAP.md",
    "/docs/*.png",
    "/scripts/*.ps1",
    "/scripts/*.sh",
    "/src/**/*.rs",
]

[[bin]]
name = "cloche"
path = "src/main.rs"

[[bin]]
name = "appshots"
path = "src/bin/appshots.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rand = "0.9"
schemars = { version = "0.8", features = ["chrono"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
tempfile = "3.23"
