[package]
name = "cloche"
version = "0.2.0"
edition = "2024"
default-run = "cloche"
description = "Open-source desktop capture CLI for screenshots, short reels, and agents"
license = "Apache-2.0"
repository = "https://github.com/escoffier-labs/cloche"
homepage = "https://github.com/escoffier-labs/cloche"
readme = "README.md"
rust-version = "1.85"
keywords = ["screenshot", "capture", "linux", "cli", "agents"]
categories = ["command-line-utilities"]
include = [
    "/Cargo.lock",
    "/Cargo.toml",
    "/LICENSE",
    "/README.md",
    "/CHANGELOG.md",
    "/ROADMAP.md",
    "/docs/*.png",
    "/scripts/*.ps1",
    "/scripts/*.sh",
    "/src/**/*.rs",
]

[[bin]]
name = "cloche"
path = "src/main.rs"

[[bin]]
name = "appshots"
path = "src/bin/appshots.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde", "std"] }
clap = { version = "4.5", default-features = false, features = ["derive", "std", "help", "usage", "error-context"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp"] }
rand = { version = "0.9", default-features = false, features = ["std", "std_rng", "thread_rng", "os_rng"] }
schemars = { version = "0.8", default-features = false, features = ["derive", "chrono"] }
serde = { version = "1.0", default-features = false, features = ["std", "derive"] }
serde_json = { version = "1.0", default-features = false, features = ["std"] }
thiserror = { version = "2.0", default-features = false, features = ["std"] }

[dev-dependencies]
tempfile = "3.23"
